<resources>
    <string name="app_name">YogaApplication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirmpassword">Confirm_password</string>
    <string name="welcometoyogafitnessapplication">Welcome To Yoga Fitness App</string>
    <string name="Exercises">Exercises</string>
    <string name="track">Track</string>
    <string name="armworkout">Arm Poses</string>
    <string name="legposes">Leg Poses</string>
    <string name="kneeposes">Knee Poses</string>
    <string name="handposes">Hand Poses</string>
    <string name="bodybuildingposes">Body Building Poses</string>
    <string name="Armworkout">Arm Workout</string>
    <string name="legworkout">Leg Workout</string>
    <string name="Kneeworkout">Knee Workout</string>
    <string name="bodybuilding">BodyBuilding Workout</string>
    <string name="pushup">Push Up</string>
    <string name="cranepose">Crane Pose</string>
    <string name="downward">Downward Facing Dog pose</string>
    <string name="armworkoutposes">Arm  Poses</string>
    <string name="legworkoutpose">Leg Poses</string>
    <string name="squat">Squat</string>
    <string name="BridgePose">Bridge Pose</string>
    <string name="sidelunge">Side Lunge</string>
    <string name="foamrolling">Foam Rolling Pose</string>
    <string name="mountainpose">Mountain Pose</string>
    <string name="handpose">Hand Pose</string>
    <string name="gyanmudra">Gyan Mudra</string>
    <string name="lingamudra">Linga Mudra</string>
    <string name="Bodybuilding">Body Building Poses</string>
    <string name="dumbell">Dumbell Lunge</string>
    <string name="DeadLift">DeadLift</string>
    <string name="legpress">Leg Press</string>
    <string name="noalarm">No Alarm Set</string>
    <string name="openpicker">Open Time Picker</string>
    <string name="cancelalarm">Cancel Alarm</string>
    <string name="date">Date</string>
    <string name="opendatepicker">Open Date Picker</string>
    <string name="BreakFast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="oats">Oats</string>
    <string name="boiledegg">Boiled Egg</string>
    <string name="drinks">Drinks</string>
    <string name="image">image</string>
    <string name="grilledchicken">GrilledChicken</string>
    <string name="chapatiandrice">Chapati And Rice</string>
    <string name="greenvegetables">Green Vegetables</string>
    <string name="salads">Salad</string>
    <string name="pasta">Pasta</string>
    <string name="save">Save</string>

</resources>
