<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarm"
    android:background="@drawable/downloads">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/noalarm"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/openpicker"
        />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/cancelalarm"
        />

</RelativeLayout>