<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LegWorkout"
    android:background="@drawable/downloads">

    <TextView
        android:id="@+id/tlegworkout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="130dp"
        android:fontFamily="cursive"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/legworkoutpose"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_s"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/squat"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/bt_br"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/BridgePose"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/bt_si"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/sidelunge"
        android:background="@drawable/custom_button"/>

</RelativeLayout>