<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".BodyBuildingWorkout"
    android:background="@drawable/downloads">

    <TextView
        android:id="@+id/tbodybuildingworkout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="130dp"
        android:fontFamily="cursive"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Bodybuilding"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_du"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/dumbell"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/bt_de"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/DeadLift"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/bt_lg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/legpress"
        android:background="@drawable/custom_button"/>

</RelativeLayout>