<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    tools:context=".Track"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/downloads">

    <Button
        android:id="@+id/bt_bre"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/BreakFast"
        android:background="@drawable/custom_button"/>

    <Button

        android:id="@+id/bt_lun"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="50dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/lunch"
        />

    <Button

        android:id="@+id/bt_din"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="50dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/Dinner"
        android:background="@drawable/custom_button"/>

</RelativeLayout>