<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context=".Home"
    android:background="@drawable/yellow"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/exerciselist"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/twelcome"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/welcometoyogafitnessapplication"
        android:textColor="#000"
        android:textSize="19sp"

        android:textStyle="bold" />

    <Button
        android:id="@+id/btnexercises"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Exercises"
        android:background="@drawable/workout"
        android:textColor="#fff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btntrack"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/fronttrack"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/track"
        android:textColor="#fff"
        android:textSize="30sp" />





</RelativeLayout>